Moving toward more of an injectable View dependency thing

--- a/source/GUI/App/AppStyles.less
+++ b/source/GUI/App/AppStyles.less
@@ -1,5 +1,11 @@
+body {
+  background: #9C48C6;
+}
+
 .App {
-  background: blue;
+  background: #BA83E2;
+  border-radius: 10px;
+  box-shadow: 0 0 10px 2px #80F2FF;
   height: 70%;
   left: 10%;
   position: absolute;
