--- a/source/GUI/FileSelection/FileSelectionStyles.less
+++ b/source/GUI/FileSelection/FileSelectionStyles.less
@@ -1,9 +1,15 @@
-.FileSelection-button {
-  color: cyan;
-  display: block;
-  font-size: 20px;
-  margin: -50px auto 0;
-  padding: 25px 50px;
+.FileSelection {
   position: relative;
-  top: 50%;
+  width: 100%;
+  height: 100%;
+
+  .upload-button {
+    color: cyan;
+    display: block;
+    font-size: 20px;
+    margin: -50px auto 0;
+    padding: 25px 50px;
+    position: relative;
+    top: 50%;
+  }
 }
