Very slightly improved styles, basic audio playlist functionality

--- a/source/GUI/Styles/AppStyles.less
+++ b/source/GUI/Styles/AppStyles.less
@@ -1,15 +1,18 @@
 body {
-  background: #9C48C6;
+  background: #95039F;
 }
 
 .App {
-  background: #BA83E2;
+  background: #E4B2E8;
+  border: 0;
+  border-bottom: 2px solid #BF57FF;
   border-radius: 10px;
-  box-shadow: 0 0 10px 2px #80F2FF;
+  box-shadow: 0 2px 5px 0px #46004D;
   height: 70%;
-  left: 10%;
+  left: calc(~'10% - 20px');
+  padding: 20px;
   position: absolute;
-  top: 15%;
+  top: calc(~'15% - 20px');
   width: 80%;
 
   .u-hidden {
