--- a/source/GUI/Styles/FileSelectionStyles.less
+++ b/source/GUI/Styles/FileSelectionStyles.less
@@ -1,15 +1,11 @@
 .FileSelection {
-  position: relative;
-  width: 100%;
-  height: 100%;
-
-  .upload-button {
+  &-button {
     color: cyan;
     display: block;
     font-size: 20px;
     margin: -50px auto 0;
     padding: 25px 50px;
-    position: relative;
+    position: absolute;
     top: 50%;
   }
 }
