More playlist fun

--- a/source/GUI/Styles/AppStyles.less
+++ b/source/GUI/Styles/AppStyles.less
@@ -1,13 +1,13 @@
 body {
-  background: #95039F;
+  background: #FFB300;
 }
 
 .App {
-  background: #E4B2E8;
+  background: #FFEEE3;
   border: 0;
-  border-bottom: 2px solid #BF57FF;
+  border-bottom: 2px solid #FFCA4F;
   border-radius: 10px;
-  box-shadow: 0 2px 5px 0px #46004D;
+  box-shadow: 0 2px 5px 0px #696100;
   height: 70%;
   left: calc(~'10% - 20px');
   padding: 20px;
