--- a/source/GUI/Styles/FileListStyles.less
+++ b/source/GUI/Styles/FileListStyles.less
@@ -1,13 +1,35 @@
+@purple: #5700DF;
+
+@keyframes border {
+  0% {
+    border-left-width: 5px;
+  }
+
+  100% {
+    border-left-width: 10px;
+  }
+}
+
 .FileList {
   &-item {
-    background: #6A7CFE;
+    background: #FFEEE3;
     border: 0;
-    border-bottom: 1px solid #4E5CC1;
-    border-radius: 3px;
-    color: #F1D8FF;
+    border-left: 5px solid #00FFD7;
+    border-radius: 4px;
+    box-shadow: 0 0 0 2px @purple;
+    color: @purple;
     font-family: Arial;
-    font-size: 13px;
-    margin-bottom: 2px;
-    padding: 6px 5px;
+    font-size: 16px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    padding: 12px 10px;
+
+    &.playing {
+      animation: border 0.2s ease-out;
+      background: @purple;
+      border-width: 10px;
+      box-shadow: 0 0 0 2px @purple;
+      color: #FFEEE3;
+    }
   }
 }
