--- a/source/Application/GUI/Styles/AppStyles.less
+++ b/source/Application/GUI/Styles/AppStyles.less
@@ -6,16 +6,14 @@ body {
   }
 
   .app {
-    background-color: #4a008f;
-    border: 0;
-    border-bottom: 2px solid rgb(255, 87, 205);
+    background-color: #6300c0;
     border-radius: 10px;
-    box-shadow: 0 0 5px 1px rgba(255, 255, 255, 0.1);
+    box-shadow: 0 0 10px 0 rgba(255, 255, 255, 0.5) inset;
     height: 650px;
     left: 50%;
-    margin: -325px 0 0 -500px;
+    margin: -325px 0 0 -600px;
     position: absolute;
     top: 50%;
-    width: 1000px;
+    width: 1200px;
   }
 }
