--- a/source/App/Style.less
+++ b/source/App/Style.less
@@ -15,5 +15,16 @@ body {
     position: absolute;
     top: 50%;
     width: 1200px;
+
+    .visualizer-container {
+      background-color: black;
+      border-radius: 7px;
+      height: ~"calc(100% - 10px)";
+      left: 5px;
+      overflow: hidden;
+      position: relative;
+      top: 5px;
+      width: ~"calc(100% - 10px)";
+    }
   }
 }
