--- a/source/App/Styles/Editor.less
+++ b/source/App/Styles/Editor.less
@@ -1,23 +1,18 @@
 @import './Helpers.less';
 
-.customization {
+.editor {
   background-color: black;
   overflow: hidden;
-  padding: 10px;
-
-  .sequence-title {
-    display: inline-block;
-    margin: 0 0 15px;
-  }
 
   label {
     color: #888;
     font-size: 15px;
-    margin: 0 8px;
+    margin: 0 5px;
   }
 
   input, select {
     background-color: #335;
+    border-radius: 2px;
     border: 0;
     color: #fff;
     margin-right: 10px;
@@ -29,23 +24,20 @@
     }
 
     &[type="text"] {
-      box-shadow: 0 0 0 1px #557 inset;
+      box-shadow: 0 0 0 1px #556 inset;
+      padding: 8px;
     }
 
     &[type="button"] {
       border-bottom: 2px solid #112;
       box-shadow: 0 0 0 1px #446;
       cursor: pointer;
+      padding: 8px 30px;
+      text-shadow: 0 -1px 0 #000;
     }
   }
 
-  .options {
-    float: right;
-
-    input {
-      border-radius: 2px;
-      padding: 8px;
-      width: 100px;
-    }
+  .channel-editors {
+    padding: 10px;
   }
 }
