Simplified EffectEditor architecture and got effect change listeners working

--- a/source/App/Styles/Helpers.less
+++ b/source/App/Styles/Helpers.less
@@ -1,3 +1,8 @@
+.animation(@name, @length) {
+  animation: @name @length;
+  -webkit-animation: @name @length;
+}
+
 .transition(@prop, @length) {
   transition: @length linear @prop;
   -webkit-transition: @length linear @prop;
