--- a/source/App/Styles/UI/SelectableBox.less
+++ b/source/App/Styles/UI/SelectableBox.less
@@ -1,6 +1,6 @@
 @import '../Helpers.less';
 
-.checkbox {
+.selectable-box {
   background-color: rgba(255, 255, 255, 0.1);
   border: 2px solid #000;
   border-radius: 2px;
@@ -16,7 +16,7 @@
   }
 
   &.selected {
-    background-color: #ccc;
+    background-color: #fff;
     box-shadow: 0 0 0 1px #ccc;
   }
 }
