--- a/source/App/Styles/ChannelEditor.less
+++ b/source/App/Styles/ChannelEditor.less
@@ -4,7 +4,7 @@
   background-color: #000;
   border-radius: 4px;
   box-shadow: 0 0 2px 0 #fff;
-  margin: 10px 0;
+  margin: 12px 0;
   overflow: hidden;
 
   .channel-editor-header {
@@ -20,7 +20,7 @@
   }
 
   .channel-editor-body {
-    padding: 10px;
+    padding: 10px 10px 0;
 
     > div:not(:last-child) {
       margin-bottom: 10px;
@@ -36,6 +36,15 @@
 
     input[type="text"] {
       background-color: #112;
+    }
+
+    .effect-editor {
+      background-color: #00000a;
+      border-radius: 2px;
+      box-shadow: 0 0 1px 0 #fff;
+      display: inline-block;
+      margin: 0 10px 0 0;
+      padding: 5px;
     }
   }
 }
