--- a/source/App/Styles/Editor.less
+++ b/source/App/Styles/Editor.less
@@ -1,10 +1,21 @@
 @import './Helpers.less';
 
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
 .editor {
   background-color: black;
   overflow: hidden;
 
   .channel-editors {
     padding: 10px;
+    .animation(fade-in, 0.5s);
   }
 }
