--- a/source/App/Styles/UI/SelectableButton.less
+++ b/source/App/Styles/UI/SelectableButton.less
@@ -5,7 +5,7 @@
   border: 0;
   border-radius: 3px;
   box-shadow: 0 0 0 1px #446;
-  color: #fff;
+  color: #888;
   cursor: pointer;
   display: inline-block;
   font-size: 13px;
@@ -19,6 +19,7 @@
 
   &.selected {
     background-color: #224;
-    box-shadow: 0 0 0 2px #aac;
+    box-shadow: 0 0 1px 1px #fff;
+    color: #fff;
   }
 }
