--- a/source/App/Styles/ChannelEditor.less
+++ b/source/App/Styles/ChannelEditor.less
@@ -30,21 +30,32 @@
       border: 1px solid #aaa;
       float: left;
       height: 50px;
-      margin: 5px 20px 0 0;
+      margin: 15px 20px 0 0;
       width: 80px;
     }
 
     input[type="text"] {
-      background-color: #112;
+      background-color: #223;
+      border-top: 1px solid #112;
+      box-shadow: 0 0 3px 0 #000 inset;
     }
 
     .effect-editor {
       background-color: #00000a;
-      border-radius: 2px;
-      box-shadow: 0 0 1px 0 #fff;
+      border: 0;
+      border-top: 2px solid #112;
+      border-bottom: 2px solid #112;
+      border-radius: 4px;
+      box-shadow: 0 0 2px 0 #666 inset;
       display: inline-block;
       margin: 0 10px 0 0;
+      opacity: 0.5;
       padding: 5px;
+      .transition(opacity, 0.1s);
+
+      &.selected {
+        opacity: 1;
+      }
     }
   }
 }
