Comitting progress from a big rearchitecture effort; original feature parity not quite yet achieved

--- a/source/App/Styles/App.less
+++ b/source/App/Styles/App.less
@@ -23,7 +23,8 @@ input, select {
     background-color: #446;
   }
 
-  &[type="text"] {
+  &[type="text"],
+  &[type="number"] {
     box-shadow: 0 0 0 1px #668 inset;
     padding: 8px;
   }
