Progress on shape/effect editor state wiring

--- a/source/App/Styles/Toolkit/EffectEditor.less
+++ b/source/App/Styles/Toolkit/EffectEditor.less
@@ -15,7 +15,7 @@
 
   &.selected {
     background-color: #001;
-    border-color: #05f;
+    border-color: #05a;
     box-shadow: 0 0 4px 0 #05f;
     opacity: 1;
   }
