--- a/source/App/Styles/ChannelEditor.less
+++ b/source/App/Styles/ChannelEditor.less
@@ -20,7 +20,7 @@
   }
 
   .channel-editor-body {
-    padding: 10px 10px 0;
+    padding: 10px;
 
     > div:not(:last-child) {
       margin-bottom: 10px;
