Effect editors now synced with state; pre-rearchitecture feature parity achieved!

--- a/source/App/Styles/ChannelEditor.less
+++ b/source/App/Styles/ChannelEditor.less
@@ -22,19 +22,7 @@
   .channel-editor-body {
     padding: 10px;
 
-    > div:not(:last-child) {
-      margin-bottom: 10px;
-    }
-
-    canvas.preview {
-      border: 1px solid #aaa;
-      float: left;
-      height: 50px;
-      margin: 15px 20px 0 0;
-      width: 80px;
-    }
-
-    input[type="text"] {
+    input[type="text"], input[type="number"] {
       background-color: #223;
       border-top: 1px solid #112;
       box-shadow: 0 0 3px 0 #000 inset;
