Added handling for a note "spread factor"

--- a/source/App/Styles/ChannelEditor.less
+++ b/source/App/Styles/ChannelEditor.less
@@ -6,6 +6,11 @@
   box-shadow: 0 0 2px 0 #fff;
   margin: 12px 0;
   overflow: hidden;
+  width: 90%;
+
+  &:last-child {
+    margin-bottom: 55px;
+  }
 
   .channel-editor-header {
     background-color: #112;
