--- a/source/App/Styles/Editor.less
+++ b/source/App/Styles/Editor.less
@@ -15,7 +15,10 @@
   overflow: hidden;
 
   .channel-editors {
+    height: 100%;
+    overflow: scroll;
     padding: 10px;
+    width: 110%;
     .animation(fade-in, 0.5s);
   }
 }
