Added glow effect editor + visualizer playback controls, other small UI refinements

--- a/source/App/Styles/Toolkit/EffectEditor.less
+++ b/source/App/Styles/Toolkit/EffectEditor.less
@@ -19,6 +19,10 @@
     opacity: 1;
   }
 
+  &.delayed {
+    border-color: #00f !important;
+  }
+
   input[type="number"] {
     width: 40px;
   }
