--- a/source/App/Styles/Editor.less
+++ b/source/App/Styles/Editor.less
@@ -1,14 +1,5 @@
-@import './Helpers.less';
-
-@keyframes fade-in {
-  0% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
-  }
-}
+@import './Toolkit/Animations.less';
+@import './Toolkit/Helpers.less';
 
 .editor {
   background-color: black;
