Improved glow effect behavior, added an audio delay option

--- a/source/App/Styles/EditorHeader.less
+++ b/source/App/Styles/EditorHeader.less
@@ -3,9 +3,16 @@
   padding: 10px;
   z-index: 2;
 
-  .sequence-title {
+  .editor-header-title {
     display: inline-block;
-    margin: 0 20px 0 0;
+    font-size: 20px;
+    font-weight: bold;
+    margin-right: 20px;
+  }
+
+  .editor-header-fields {
+    display: inline-block;
+    vertical-align: top;
   }
 
   .play-button {
