--- a/source/App/Styles/PlayerControls.less
+++ b/source/App/Styles/PlayerControls.less
@@ -33,7 +33,7 @@
         background-color: #aaa;
       }
 
-      &.rewind-button {
+      &.restart-button {
         letter-spacing: -8px;
       }
     }
