--- a/source/App/Styles/EditorHeader.less
+++ b/source/App/Styles/EditorHeader.less
@@ -10,7 +10,7 @@
     margin-right: 20px;
   }
 
-  .editor-header-fields {
+  .customizer-setting-fields {
     display: inline-block;
     vertical-align: top;
   }
