Added a channel shape/effects randomizer

--- a/source/App/Styles/ChannelEditor.less
+++ b/source/App/Styles/ChannelEditor.less
@@ -20,6 +20,11 @@
       display: inline-block;
       margin-right: 10px;
     }
+
+    .randomize-button {
+      margin-left: 20px;
+      padding: 6px;
+    }
   }
 
   .channel-editor-body {
