--- a/source/App/Styles/Toolkit/ColorField.less
+++ b/source/App/Styles/Toolkit/ColorField.less
@@ -5,9 +5,10 @@
   label {
     color: #aaa;
     cursor: text;
-    margin: 7px 5px;
+    margin: 0 -14px 0 5px;
     pointer-events: none;
-    position: absolute;
+    position: relative;
+    z-index: 2;
   }
 
   input {
