Added background color customization and a frame downloader

--- a/source/App/Styles/EditorHeader.less
+++ b/source/App/Styles/EditorHeader.less
@@ -13,6 +13,10 @@
   .customizer-setting-fields {
     display: inline-block;
     vertical-align: top;
+
+    label {
+      font-size: 13px;
+    }
   }
 
   .play-button {
