Added note spread customization field + shape size input

--- a/source/App/Styles/ShapeEditor.less
+++ b/source/App/Styles/ShapeEditor.less
@@ -1,3 +1,8 @@
 .shape-editor {
   margin-bottom: 10px;
+
+  .shape-size-field {
+    box-shadow: 0 0 0 1px #555 !important;
+    width: 50px;
+  }
 }
